tests/netperf/isilon_10G/udp_050/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.4 12.0 12.3 14.2 14.8 16.7 17.1 19.1 19.3 20.7 20.1 22.2 21.8 23.6 22.8 24.7 24.1 25.8 25.0 27.1 26.4 27.8 26.8 29.0 28.2 29.7 28.4 30.3 29.2 31.1 29.7 31.4 29.9 31.7 30.5 32.4 31.2 32.7 31.3 33.2 31.5 33.4 31.8 33.7 32.6 34.4 32.8 34.3 32.7 34.9 33.5 35.3 33.8
average: 26.9698
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.5
[ipfwd] starting
current:  5.890%, error:  5.9%, probability:  0.500%
current:  8.417%, error:  3.4%, probability:  0.500%
current:  8.740%, error:  0.3%, probability:  0.500%
current:  10.040%, error:  1.3%, probability:  0.500%
current:  12.238%, error:  2.2%, probability:  0.500%
current:  13.257%, error:  1.0%, probability:  0.500%
current:  15.198%, error:  1.9%, probability:  0.500%
current:  14.978%, error:  0.2%, probability:  0.500%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 7.7.7.2 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 7.7.7.2 (7.7.7.2) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.01     2105713      0    9197.53
512000           30.01     2104490           9192.19

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
13.9 16.8 21.2 23.6 28.0 29.6 34.1 34.9 39.3 39.8 44.5 44.3 48.8 53.2 52.6 57.2 56.5 60.7 59.1 63.5 62.0 66.5 64.8 69.2 67.1 71.7 69.1 72.9 70.3 75.0 79.5 76.9 81.6 78.5 83.0 79.8 84.3 80.8 84.6 81.4 85.9 82.3 86.6 82.8 87.3 83.2 87.9 84.0 88.4 93.0 89.3 93.7 89.3 93.8 89.4 93.8
average: 66.6304
zephram-2# 

